--- a/optimlib.html
+++ b/optimlib.html
@@ -124,7 +124,7 @@
 
 <p><strong>License</strong>: OptimLib is licensed under the GNU General Public License (GPL) version 2, or (at your option) any later version.</p>
 
-<hr>
+<hr style="height:2px;border-width:0;background-color:black">
 
 <h3 style="text-align: left;"><strong style="font-size: 95%;">Download and Installation</strong></h3>
 <ul>
