--- a/optimlib_docs_broyden.html
+++ b/optimlib_docs_broyden.html
@@ -209,7 +209,7 @@ $$y_i := F(x_{i}) - F(x_{i-1})$$
 
 $$F(x) = \begin{bmatrix} \exp(-\exp(-(x_1+x_2))) - x_2*(1+x_1^2) \\ x_1*\cos(x_2) + x_2*\sin(x_1) - 0.5  \end{bmatrix}$$
 
-<p>Code to solve this problem, without and without using the Jacobian, is given below.</p>
+<p>Code to solve this problem, with and without the jacobian, is given below.</p>
 
 <pre class="brush: cpp;">
 #include "optim.hpp"
