--- a/optimlib_docs_settings.html
+++ b/optimlib_docs_settings.html
@@ -112,8 +112,8 @@ struct opt_settings {
 
     int de_check_freq = -1;
 
-    double de_par_F = OPTIM_DEFAULT_DE_PAR_F;
-    double de_par_CR = OPTIM_DEFAULT_DE_PAR_CR;
+    double de_par_F = 0.8;
+    double de_par_CR = 0.9;
 
     double de_par_F_l = 0.1;
     double de_par_F_u = 1.0;
@@ -158,6 +158,8 @@ struct opt_settings {
 
     arma::vec pso_lb; // this will default to -0.5
     arma::vec pso_ub; // this will default to  0.5
+
+    bool pso_par_bounds = false;
 };
 </pre>
 
