--- a/trame.html
+++ b/trame.html
@@ -43,6 +43,8 @@
 
     </script>
 
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+
     <script src="js/jquery.js"></script>
     <script>
         $(function(){
@@ -78,14 +80,11 @@
     </div>
     <div class="col-md-8">
         <br>
-        <br>
         <h3 style="text-align: center;"><strong style="font-size: 130%;"><u>Transportation Methods for Econometrics</u></strong></h3>
-        <!-- <p style="text-align: center;"><a href="https://github.com/TraME-Project/TraME" target="_blank"><i class="fa fa-github-square fa-2x" style="color:black"></i></a></p> -->
-        <!-- <p style="text-align: center;"><a href="https://travis-ci.org/TraME-Project/TraME" target="_blank"><img src="https://travis-ci.org/TraME-Project/TraME.svg?branch=master" alt="optim Build"></a> -->
-        <!-- <a href="https://codecov.io/github/TraME-Project/TraME?branch=master" target="_blank"><img src="https://codecov.io/github/TraME-Project/TraME/coverage.svg?branch=master" alt="Coverage Status"></a></p> -->
-        <!-- <p style="text-align: center;"><a class="github-button" href="https://github.com/TraME-Project/TraME/subscription" data-icon="octicon-eye" data-count-href="/TraME-Project/TraME/watchers" data-count-api="/repos/TraME-Project/TraME#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch TraME-Project/TraME on GitHub">Watch</a> -->
-        <!-- <a class="github-button" href="https://github.com/TraME-Project/TraME" data-icon="octicon-star" data-count-href="/TraME-Project/TraME/stargazers" data-count-api="/repos/TraME-Project/TraME#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star TraME-Project/TraME on GitHub">Star</a> -->
-        <!-- <a class="github-button" href="https://github.com/TraME-Project/TraME/fork" data-icon="octicon-repo-forked" data-count-href="/TraME-Project/TraME/network" data-count-api="/repos/TraME-Project/TraME#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork TraME-Project/TraME on GitHub">Fork</a></p> -->
+         <p style="text-align: center;"><a href="https://travis-ci.org/kthohr/gcem" target="_blank"><img src="https://travis-ci.org/kthohr/gcem.svg?branch=master" alt="TraME Build"></a> </p> 
+         <p style="text-align: center;"><a class="github-button" href="https://github.com/TraME-Project/TraME/subscription" data-icon="octicon-eye" data-count-href="/TraME-Project/TraME/watchers" data-count-api="/repos/TraME-Project/TraME#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch TraME-Project/TraME on GitHub">Watch</a> 
+         <a class="github-button" href="https://github.com/TraME-Project/TraME" data-icon="octicon-star" data-count-href="/TraME-Project/TraME/stargazers" data-count-api="/repos/TraME-Project/TraME#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star TraME-Project/TraME on GitHub">Star</a> 
+         <a class="github-button" href="https://github.com/TraME-Project/TraME/fork" data-icon="octicon-repo-forked" data-count-href="/TraME-Project/TraME/network" data-count-api="/repos/TraME-Project/TraME#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork TraME-Project/TraME on GitHub">Fork</a></p> 
     </div>
     <div class="col-md-2">
         <a href="https://en.wikipedia.org/wiki/Leonid_Kantorovich" target="_blank"><img src="pics/trame_kantorovich.png" class="img-responsive center-block" alt="" width="150" height="150"></a>
@@ -136,9 +135,9 @@
     <li>Contributors: Yifei Sun, <a href="https://sites.google.com/site/webersimonsite/home" target="_blank">Simon Weber</a></li>
 </ul>
 
-<hr>
+<hr style="height:2px;border-width:0;background-color:black">
 
-<h3 style="text-align: left;"><strong style="font-size: 110%;">Download</strong> <a href="https://travis-ci.org/TraME-Project/TraME" target="_blank"><img src="https://travis-ci.org/TraME-Project/TraME.svg?branch=master" alt="BMR Build"></a></h3>
+<h3 style="text-align: left;"><strong style="font-size: 95%;">Download and Installation</strong></h3>
 
 <ul>
     <li>The source code is available on <a href="https://github.com/TraME-Project/TraME" target="_blank">GitHub</a>.</li>
