--- a/navbar.html
+++ b/navbar.html
@@ -31,6 +31,9 @@
                                 <a href="gcem.html">GCE-Math</a>
                             </li>
                             <li>
+                                <a href="mcmc.html">MCMC</a>
+                            </li>
+                            <li>
                                 <a href="optimlib.html">OptimLib</a>
                             </li>
                             <li>
