--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <a href="optimlib.html" target="_blank" class="btn btn-default">OptimLib</a>
                         <p><hr />Math and Stats</p>
                         <a href="gcem.html" target="_blank" class="btn btn-default">GCE-Math</a>
-                        <a href="mcmc.html" target="_blank" class="btn btn-default">MCMC</a>
+                        <a href="mcmclib.html" target="_blank" class="btn btn-default">MCMC</a>
                         <a href="statslib.html" target="_blank" class="btn btn-default">StatsLib</a>
                     </div>
                 </div>
