--- a/navbar.html
+++ b/navbar.html
@@ -31,7 +31,7 @@
                                 <a href="gcem.html">GCE-Math</a>
                             </li>
                             <li>
-                                <a href="mcmc.html">MCMC</a>
+                                <a href="mcmclib.html">MCMC</a>
                             </li>
                             <li>
                                 <a href="optimlib.html">OptimLib</a>
