--- a/optimlib.html
+++ b/optimlib.html
@@ -73,6 +73,24 @@
         }
     </script>
 
+    <script>
+    var image_list2 = new Array()
+    var link_list2 = new Array()
+
+    image_list2[0] = 'pics/rastrigin_fn.png'
+    image_list2[1] = 'pics/ackley_fn_3d.png'
+
+    link_list2[0] = 'optimlib_docs_de.html#examples'
+
+    var n_imag2 = image_list2.length;
+
+    var which_image2 = Math.round(Math.random()*(n_imag-1));
+
+        function showImage2(){
+            document.write('<a href="'+link_list2[0]+'" target="_blank"><img src="'+image_list2[which_image2]+'" class="img-rounded pull-right" alt="Sphere" width="304" height="236"></a>');
+        }
+    </script>
+
 </head>
 
 <body>
@@ -105,7 +123,8 @@
     <div class="col-md-4">
         <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
         <!-- <img src="pics/rastrigin_fn.png" class="img-rounded pull-right" alt="Sphere" width="304" height="236"> -->
-        <a href="optimlib_docs_de.html#examples" target="_blank"><img src="pics/ackley_fn_3d.png" class="img-rounded pull-right" alt="Ackley" width="304" height="236"></a>
+        <!-- <a href="optimlib_docs_de.html#examples" target="_blank"><img src="pics/ackley_fn_3d.png" class="img-rounded pull-right" alt="Ackley" width="304" height="236"></a> -->
+        <script>showImage2();</script>
     </div>
 </div>
 
