--- a/optimlib_docs_cg.html
+++ b/optimlib_docs_cg.html
@@ -126,6 +126,11 @@ bool cg(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& vals
 <ul>
     <li><code>double err_tol</code> the tolerance value controlling how small $\| \nabla f \|$ should be before 'convergence' is declared.</li>
     <li><code>int iter_max</code> the maximum number of iterations/updates before the algorithm exits.</li>
+    <li><code>bool vals_bound</code> whether the search space is bounded. If true, then</li>
+    <ul>
+        <li><code>arma::vec lower_bounds</code> this defines the lower bounds.</li>
+        <li><code>arma::vec upper_bounds</code> this defines the upper bounds.</li>
+    </ul>
     <li><code>int cg_method</code> which updating formula to use; see the details section below.</li>
     <li><code>double cg_restart_threshold</code> the value $\nu$ in the details section below.</li>
 </ul>
