--- a/optimlib_docs_nm.html
+++ b/optimlib_docs_nm.html
@@ -124,6 +124,11 @@ bool nm(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& vals
 <ul>
     <li><code>double err_tol</code> the value controlling how small $\| \nabla f \|$ should be before 'convergence' is declared.</li>
     <li><code>int iter_max</code> the maximum number of iterations/updates before the algorithm exits.</li>
+    <li><code>bool vals_bound</code> whether the search space is bounded. If true, then</li>
+    <ul>
+        <li><code>arma::vec lower_bounds</code> this defines the lower bounds.</li>
+        <li><code>arma::vec upper_bounds</code> this defines the upper bounds.</li>
+    </ul>
     <li><code>double nm_par_alpha</code> reflection parameter.</li>
     <li><code>double nm_par_gamma</code> expansion parameter.</li>
     <li><code>double nm_par_beta</code> contraction parameter.</li>
