--- a/optimlib_docs_pso.html
+++ b/optimlib_docs_pso.html
@@ -124,6 +124,11 @@ bool pso(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& val
 
 <p><strong>Optimization control parameters:</strong></p>
 <ul>
+    <li><code>bool vals_bound</code> whether the search space is bounded. If true, then</li>
+    <ul>
+        <li><code>arma::vec lower_bounds</code> this defines the lower bounds.</li>
+        <li><code>arma::vec upper_bounds</code> this defines the upper bounds.</li>
+    </ul>
     <li><code>int pso_n_pop</code> population size of each generation.</li>
     <li><code>int pso_n_gen</code> number of vectors to generate.</li>
     <li><code>int pso_check_freq</code> number of generations between convergence checks.</li>
@@ -139,6 +144,8 @@ bool pso(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& val
     </ul>
     <li><code>double pso_par_c_cog</code> weight value on the 'cognitive' factor.</li>
     <li><code>double pso_par_c_soc</code> weight value on the 'social' factor.</li>
+    <li><code>arma::vec pso_init_lb</code> lower bounds on the initial population; defaults to <code>init_out_vals</code> $- \ 0.5$.</li>
+    <li><code>arma::vec pso_init_ub</code> upper bounds on the initial population; defaults to <code>init_out_vals</code> $+ \ 0.5$.</li>
 </ul>
 
 <hr style="height:2px;border-width:0;background-color:black">
