--- a/about.html
+++ b/about.html
@@ -84,12 +84,9 @@
                 <br>
                 <p>My name is Keith O'Hara. I am a Ph.D. Candidate at <abbr title="New York University">NYU</abbr>'s Department of Economics.</p>
                 <h3>Contact Details</h3>
-                <p><i class="fa fa-address-book-o"></i>
-                    <abbr title="Mailing Address">M</abbr>:<br>
-                    19 W 4th St<br>6FL<br>New York, NY 10012<br>
+                <p><i i class="fa fa-address-card-o" aria-hidden="true"></i> 19 W 4th St<br>&nbsp; &nbsp; &nbsp; 6FL<br>&nbsp; &nbsp; &nbsp; New York, NY 10012<br>
                 </p>
-                <p><i class="fa fa-envelope-o"></i> 
-                    <abbr title="Email">E</abbr>: <a href="mailto:keith.ohara@nyu.edu">keith.ohara@nyu.edu</a>
+                <p><i class="fa fa-envelope-o"></i> <a href="mailto:keith.ohara@nyu.edu">&nbsp;keith.ohara@nyu.edu</a>
                 </p>
                 <ul class="list-unstyled list-inline list-social-icons">
                     <li>
