--- a/navbar.html
+++ b/navbar.html
@@ -57,10 +57,12 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Teaching <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="phd_metrics.html">Econometrics</a>
+                                <!-- <a href="phd_metrics.html">Econometrics</a> -->
+                                <a href="#">PhD Econometrics</a>
                             </li>
                             <li>
-                                <a href="fin_econ.html">Financial Economics</a>
+                                <!-- <a href="fin_econ.html">Financial Economics</a> -->
+                                <a href="#">Financial Economics</a>
                             </li>
                         </ul>
                     </li>
