--- a/about.html
+++ b/about.html
@@ -68,8 +68,11 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">About </h1>
+                <!-- <h1 class="page-header">About </h1> -->
+                <h1>About</h1>
+                <hr style="height:2px;border-width:0;background-color:black">
                 <br>
+                <!-- <br> -->
             </div>
         </div>
         <!-- /.row -->
@@ -81,9 +84,10 @@
             </div>
             <div class="col-md-8">
                 <!-- <h2>About</h2> -->
-                <br>
+                <!-- <br> -->
                 <p>My name is Keith O'Hara. I am a Ph.D. Candidate at <abbr title="New York University">NYU</abbr>'s Department of Economics.</p>
-                <h3>Contact Details</h3>
+                <br>
+                <h4>Contact Details</h4>
                 <p><i i class="fa fa-address-card-o" aria-hidden="true"></i> 19 W 4th St<br>&nbsp; &nbsp; &nbsp; 6FL<br>&nbsp; &nbsp; &nbsp; New York, NY 10012<br>
                 </p>
                 <p><i class="fa fa-envelope-o"></i> <a href="mailto:keith.ohara@nyu.edu">&nbsp;keith.ohara@nyu.edu</a>
