--- a/optimlib.html
+++ b/optimlib.html
@@ -134,8 +134,8 @@
 
 <p><strong>Features</strong></p>
 <ul>
-    <li>C++11 library of local and global optimization methods, as well as root finding.</li>
-    <li>Advanced derivative-free algorithms, including Differential Evolution (DE) and Particle Swarm Optimization (PSO), with state-of-the-art hybrid methods.</li>
+    <li>Modern C++11 library of local and global optimization methods, as well as root finding techniques.</li>
+    <li>Advanced derivative-free algorithms, including Differential Evolution (DE) and Particle Swarm Optimization (PSO), with state-of-the-art hybrid metaheuristics.</li>
     <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for fast and efficient matrix computation.</li>
 </ul>
 
