--- a/optimlib.html
+++ b/optimlib.html
@@ -50,6 +50,7 @@
         $(function(){
             $("#mynavbar").load("navbar.html")
             $("#optimhead").load("optimlib_header.html")
+            $("#myfooter").load("footer.html")
         });
     </script>
 
@@ -168,19 +169,10 @@ make install</pre>
     <li><code>-m</code> specify the BLAS and Lapack libraries to link against the shared library; for example, <code>-m "-lopenblas"</code> or <code>-m "-framework Accelerate"</code></li>
     <li><code>-p</code> a parallelized build using OpenMP</li>
 </ul>
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Keith O'Hara 2017</p>
-                </div>
-            </div>
-        </footer>
 
     </div>
-    <!-- /.container -->
+
+    <div id="myfooter"></div>
 
     <!-- jQuery -->
     <!--<script src="js/jquery.js"></script>-->
