--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <script>
         $(function(){
             $("#mynavbar").load("navbar.html")
+            $("#myfooter").load("footer.html")
         });
     </script>
 
@@ -109,19 +110,10 @@
             </div>
         </div>
 
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Keith O'Hara 2017</p>
-                </div>
-            </div>
-        </footer>
-
     </div>
     <!-- /.container -->
+
+    <div id="myfooter"></div>
 
     <!-- jQuery -->
     <!--<script src="js/jquery.js"></script>-->
