--- a/bmr.html
+++ b/bmr.html
@@ -45,6 +45,7 @@
     <script>
         $(function(){
             $("#mynavbar").load("navbar.html")
+            $("#myfooter").load("footer.html")
         });
     </script>
 
@@ -131,7 +132,7 @@ pre {
         <td>
         &nbsp;
         </td>
-        <td class="line" style="vertical-align: top;">
+        <td class="line" style="vertical-align: top;" style="border-color:black;">
         <br>
         </td>
         <td style="text-align: left; vertical-align: top; width: 50%;">
@@ -284,19 +285,10 @@ data(BMRVARData)</pre>
   </ul>
   <li>Version 0.1: First release, August 2012.</li>
 </ul>
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Keith O'Hara 2017</p>
-                </div>
-            </div>
-        </footer>
 
     </div>
-    <!-- /.container -->
+    
+    <div id="myfooter"></div>
 
     <!-- jQuery -->
     <!--<script src="js/jquery.js"></script>-->
