--- a/404.html
+++ b/404.html
@@ -39,6 +39,7 @@
     <script>
         $(function(){
             $("#mynavbar").load("navbar.html")
+            $("#myfooter").load("footer.html")
         });
     </script>
 
@@ -67,19 +68,9 @@
         </div>
         <!-- /.row -->
 
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Keith O'Hara 2017</p>
-                </div>
-            </div>
-        </footer>
-
     </div>
-    <!-- /.container -->
+    
+    <div id="myfooter"></div>
 
     <!-- jQuery -->
     <!--<script src="js/jquery.js"></script>-->
