--- a/bmr-replication-files.html
+++ b/bmr-replication-files.html
@@ -50,6 +50,7 @@
     <script>
         $(function(){
             $("#mynavbar").load("navbar.html")
+            $("#myfooter").load("footer.html")
         });
     </script>
 
@@ -148,19 +149,9 @@
  </ul>
 </ul>
 
-<hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Keith O'Hara 2017</p>
-                </div>
-            </div>
-        </footer>
-
     </div>
-    <!-- /.container -->
+
+    <div id="myfooter"></div>
 
     <!-- jQuery -->
     <!--<script src="js/jquery.js"></script>-->
