--- a/gcem_docs_basic_abs.html
+++ b/gcem_docs_basic_abs.html
@@ -58,6 +58,7 @@
         $(function(){
             $("#mynavbar").load("navbar.html")
             $("#gcemhead").load("gcem_header.html")
+            $("#myfooter").load("footer.html")
         });
     </script>
 
@@ -96,18 +97,9 @@ constexpr T abs(const T x)
 
 <p>Computes $\text{abs}(x)$ for real-valued $x$.</p>
 
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Keith O'Hara 2017</p>
-                </div>
-            </div>
-        </footer>
-
     </div>
+
+    <div id="myfooter"></div>
     <!-- /.container -->
 
     <!-- jQuery -->
