--- a/gcem_docs_basic_pow.html
+++ b/gcem_docs_basic_pow.html
@@ -58,6 +58,7 @@
         $(function(){
             $("#mynavbar").load("navbar.html")
             $("#gcemhead").load("gcem_header.html")
+            $("#myfooter").load("footer.html")
         });
     </script>
 
@@ -98,19 +99,9 @@ constexpr long double pow_dbl(const long double base, const long double exp_term
 
 <p>Computes $x^y$. Recursion is used for the case of integer $y$, otherwise $x^y = \exp(y\log(x))$.</p>
 
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Keith O'Hara 2017</p>
-                </div>
-            </div>
-        </footer>
-
     </div>
-    <!-- /.container -->
+
+    <div id="myfooter"></div>
 
     <!-- jQuery -->
     <!--<script src="js/jquery.js"></script>-->
