--- a/gcem_docs_sf_gamma.html
+++ b/gcem_docs_sf_gamma.html
@@ -58,6 +58,7 @@
         $(function(){
             $("#mynavbar").load("navbar.html")
             $("#gcemhead").load("gcem_header.html")
+            $("#myfooter").load("footer.html")
         });
     </script>
 
@@ -102,20 +103,9 @@ $$\Gamma(x) = \int_0^\infty y^{z-1} \exp(-y) dy$$
 $$\Gamma(x+1) \approx (x+g+0.5)^{x+0.5} \exp(-x-g-0.5) \sqrt{2 \pi} \left[ c_0 + \frac{c_1}{x+1} + \frac{c_2}{x+2} + \cdots + \frac{c_n}{x+n} \right]$$
 <p>where the coefficients $(c_0, \ldots, c_n)$ and $g$ are taken from Paul Godfrey's note <a href="http://my.fit.edu/~gabdo/gamma.txt" target="_blank">here</a>.</p>
 
-
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Keith O'Hara 2017</p>
-                </div>
-            </div>
-        </footer>
-
     </div>
-    <!-- /.container -->
+
+    <div id="myfooter"></div>
 
     <!-- jQuery -->
     <!--<script src="js/jquery.js"></script>-->
