--- a/gcem_docs_sf_incomplete_beta.html
+++ b/gcem_docs_sf_incomplete_beta.html
@@ -58,6 +58,7 @@
         $(function(){
             $("#mynavbar").load("navbar.html")
             $("#gcemhead").load("gcem_header.html")
+            $("#myfooter").load("footer.html")
         });
     </script>
 
@@ -107,19 +108,9 @@ $$c_j = 1 + a_j / c_{j-1}$$
 $$d_j = 1 / (1 + a_j d_{j-1})$$
 $$f_j = c_j d_j f_{j-1}$$
 
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Keith O'Hara 2017</p>
-                </div>
-            </div>
-        </footer>
-
     </div>
-    <!-- /.container -->
+
+    <div id="myfooter"></div>
 
     <!-- jQuery -->
     <!--<script src="js/jquery.js"></script>-->
