--- a/gcem_docs_tf_sin.html
+++ b/gcem_docs_tf_sin.html
@@ -58,6 +58,7 @@
         $(function(){
             $("#mynavbar").load("navbar.html")
             $("#gcemhead").load("gcem_header.html")
+            $("#myfooter").load("footer.html")
         });
     </script>
 
@@ -96,19 +97,9 @@ constexpr long double sin(const long double x)
 <p>Computes $\sin(x)$ for real-valued $x$, using</p>
 $$ \sin(x) = \frac{2\tan(x/2)}{1+\tan^2(x/2)} $$
 
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Keith O'Hara 2017</p>
-                </div>
-            </div>
-        </footer>
-
     </div>
-    <!-- /.container -->
+
+    <div id="myfooter"></div>
 
     <!-- jQuery -->
     <!--<script src="js/jquery.js"></script>-->
