--- a/gcem_docs_tf_asin.html
+++ b/gcem_docs_tf_asin.html
@@ -58,6 +58,7 @@
         $(function(){
             $("#mynavbar").load("navbar.html")
             $("#gcemhead").load("gcem_header.html")
+            $("#myfooter").load("footer.html")
         });
     </script>
 
@@ -96,19 +97,9 @@ constexpr long double asin(const long double x)
 <p>Computes $\text{asin}(x)$ for $x \in [-1,1]$, using</p>
 $$ \text{asin}(x) = \text{atan} \left( \frac{x}{\sqrt{1-x^2}} \right) $$
 
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Keith O'Hara 2017</p>
-                </div>
-            </div>
-        </footer>
-
     </div>
-    <!-- /.container -->
+
+    <div id="myfooter"></div>
 
     <!-- jQuery -->
     <!--<script src="js/jquery.js"></script>-->
