--- a/optimlib_docs_nm.html
+++ b/optimlib_docs_nm.html
@@ -58,6 +58,7 @@
         $(function(){
             $("#mynavbar").load("navbar.html")
             $("#optimhead").load("optimlib_header.html")
+            $("#myfooter").load("footer.html")
         });
     </script>
 
@@ -168,20 +169,9 @@ bool nm(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& vals
         Go to Step 1.</li>
 </ul>
 
-
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Keith O'Hara 2017</p>
-                </div>
-            </div>
-        </footer>
-
     </div>
-    <!-- /.container -->
+
+    <div id="myfooter"></div>
 
     <!-- jQuery -->
     <!--<script src="js/jquery.js"></script>-->
