--- a/optimlib_docs_cg.html
+++ b/optimlib_docs_cg.html
@@ -58,6 +58,7 @@
         $(function(){
             $("#mynavbar").load("navbar.html")
             $("#optimhead").load("optimlib_header.html")
+            $("#myfooter").load("footer.html")
         });
     </script>
 
@@ -270,19 +271,9 @@ int main()
 }
 </pre>
 
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Keith O'Hara 2017</p>
-                </div>
-            </div>
-        </footer>
-
     </div>
-    <!-- /.container -->
+
+    <div id="myfooter"></div>
 
     <!-- jQuery -->
     <!--<script src="js/jquery.js"></script>-->
