--- a/research.html
+++ b/research.html
@@ -43,6 +43,7 @@
     <script>
         $(function(){
             $("#mynavbar").load("navbar.html")
+            $("#myfooter").load("footer.html")
         });
     </script>
 
@@ -99,32 +100,15 @@
 
         <!-- /.row -->
 
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Keith O'Hara 2017</p>
-                </div>
-            </div>
-        </footer>
-
     </div>
-    <!-- /.container -->
+    
+    <div id="myfooter"></div>
 
     <!-- jQuery -->
     <!--<script src="js/jquery.js"></script>-->
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-
-     <!-- Script to Activate the Carousel 
-    <script>
-    $('.carousel').carousel({
-        interval: 5000 //changes the speed
-    })
-    </script> -->
 
 </body>
 
