--- a/trame.html
+++ b/trame.html
@@ -49,6 +49,7 @@
     <script>
         $(function(){
             $("#mynavbar").load("navbar.html")
+            $("#myfooter").load("footer.html")
         });
     </script>
 
@@ -162,19 +163,9 @@ make install</pre>
     <li><code>-p</code> a parallelized build using OpenMP</li>
 </ul>
 
-    <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Keith O'Hara 2017</p>
-                </div>
-            </div>
-        </footer>
-
     </div>
-    <!-- /.container -->
+
+    <div id="myfooter"></div>
 
     <!-- jQuery -->
     <!--<script src="js/jquery.js"></script>-->
